use Stream.toList()